--- a/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
@@ -61,16 +61,16 @@
             <wpfExtended:ColorPicker x:Name="BackGroundFondoFirst" Grid.Column="0" SelectedColorChanged="BackGroundFondoFirst_SelectedColorChanged"/>
             <wpfExtended:ColorPicker x:Name="BackGroundFondoSecond" Grid.Column="2" SelectedColorChanged="BackGroundFondoSecond_SelectedColorChanged"/>
         </Grid>
-        <Label Grid.Row="12" Grid.Column="1" Content="Colores Principales" Foreground="{DynamicResource MainColorSolid}"/>
+        <!--Label Grid.Row="12" Grid.Column="1" Content="Colores Principales" Foreground="{DynamicResource MainColorSolid}"/>
         <Grid Grid.Row="13" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="45*" />
                 <ColumnDefinition Width="10*" />
                 <ColumnDefinition Width="45*" />
             </Grid.ColumnDefinitions>
-            <wpfExtended:ColorPicker Grid.Column="0"/>
-            <wpfExtended:ColorPicker Grid.Column="2"/>
-        </Grid>
+            <wpfExtended:ColorPicker x:Name="MainColor" Grid.Column="0" SelectedColorChanged="MainColor_SelectedColorChanged"/>
+            <wpfExtended:ColorPicker x:Name="StandOutColor" Grid.Column="2" SelectedColorChanged="StandOutColor_SelectedColorChanged"/>
+        </Grid-->
         <Button x:Name="BtnClose" Grid.Column="1" Grid.Row="15" Content="Salir" Click="BtnClose_Click" Foreground="{DynamicResource MainColorSolid}"/>
     </Grid>
 </Window>
