--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioCurso.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioCurso.xaml
@@ -37,107 +37,142 @@
                         <RowDefinition Height="90*" />
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
-                    <Grid Grid.Column="1" Grid.Row="1" x:Name="CreationContentPanel"
+                    <TabControl Grid.Row="1" Grid.Column="1">
+                        <TabItem Header="Curso">
+                            <Grid Grid.Column="1" Grid.Row="1" x:Name="CreationContentPanel"
                                   Background="{DynamicResource BackgroundContainerGradient}">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="5*" />
-                            <ColumnDefinition  Width="90*"/>
-                            <ColumnDefinition  Width="5*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="5*" />
-                            <RowDefinition Height="15*" />
-                            <RowDefinition Height="5*" />
-                            <RowDefinition Height="15*" />
-                            <RowDefinition Height="5*" />
-                            <RowDefinition Height="10*" />
-                            <RowDefinition Height="5*" />
-                        </Grid.RowDefinitions>
-                        <Label />
-                        <Grid Grid.Row="1" Grid.Column="1">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="35*" />
-                                <ColumnDefinition Width="15*" />
-                                <ColumnDefinition Width="50*" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="50*" />
-                                <RowDefinition Height="50*" />
-                            </Grid.RowDefinitions>
-                            <Label Content="{DynamicResource FormCursoCod}" Grid.Column="0"/>
-                            <TextBox x:Name="TxtCod" Grid.Column="0" Grid.Row="1" />
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="5*" />
+                                    <ColumnDefinition  Width="90*"/>
+                                    <ColumnDefinition  Width="5*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="10*" />
+                                    <RowDefinition Height="5*" />
+                                </Grid.RowDefinitions>
+                                <Label />
+                                <Grid Grid.Row="1" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="35*" />
+                                        <ColumnDefinition Width="15*" />
+                                        <ColumnDefinition Width="50*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="50*" />
+                                        <RowDefinition Height="50*" />
+                                    </Grid.RowDefinitions>
+                                    <Label Content="{DynamicResource FormCursoCod}" Grid.Column="0"/>
+                                    <TextBox x:Name="TxtCod" Grid.Column="0" Grid.Row="1" />
 
-                            <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
-                                <TextBlock.Style>
-                                    <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                        <Setter Property="Visibility" Value="Collapsed"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=TxtCod}" Value="">
-                                                <Setter Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </TextBlock.Style>
-                            </TextBlock>
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoCodxample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtCod}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
 
-                            <Label Content="{DynamicResource FormCursoNombre}" Grid.Column="2"/>
-                            <TextBox Grid.Column="2" x:Name="TxtNombre" Grid.Row="1" />
+                                    <Label Content="{DynamicResource FormCursoNombre}" Grid.Column="2"/>
+                                    <TextBox Grid.Column="2" x:Name="TxtNombre" Grid.Row="1" />
 
-                            <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormCursoNombreExample}" >
-                                <TextBlock.Style>
-                                    <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                        <Setter Property="Visibility" Value="Collapsed"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=TxtNombre}" Value="">
-                                                <Setter Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </TextBlock.Style>
-                            </TextBlock>
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormCursoNombreExample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtNombre}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
 
-                        </Grid>
-                        <Grid Grid.Row="3" Grid.Column="1">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="35*" />
-                                <ColumnDefinition Width="15*" />
-                                <ColumnDefinition Width="50*" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="50*" />
-                                <RowDefinition Height="50*" />
-                            </Grid.RowDefinitions>
-                            <Label Content="{DynamicResource FormCursoDate}" Grid.Column="0"/>
-                            <wpfExtended:DateTimePicker x:Name="TxtDate" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                                </Grid>
+                                <Grid Grid.Row="3" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="35*" />
+                                        <ColumnDefinition Width="15*" />
+                                        <ColumnDefinition Width="50*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="50*" />
+                                        <RowDefinition Height="50*" />
+                                    </Grid.RowDefinitions>
+                                    <Label Content="{DynamicResource FormCursoDate}" Grid.Column="0"/>
+                                    <wpfExtended:DateTimePicker x:Name="TxtDate" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
 
 
-                            <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoDateExample}" >
-                                <TextBlock.Style>
-                                    <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                        <Setter Property="Visibility" Value="Collapsed"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=TxtDate}" Value="">
-                                                <Setter Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </TextBlock.Style>
-                            </TextBlock>
-                            <CheckBox Grid.Column="2" x:Name="TxtShift" Grid.Row="1" Content="{DynamicResource FormCursoShift}"/>
-                        </Grid>
-                        <Grid Grid.Row="5" Grid.Column="1">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="30*" />
-                                <ColumnDefinition Width="5*" />
-                                <ColumnDefinition Width="30*" />
-                                <ColumnDefinition Width="5*" />
-                                <ColumnDefinition Width="30*" />
-                            </Grid.ColumnDefinitions>
-                            <Button x:Name="Create" Grid.Column="0" Content="{StaticResource FormCursoCreationButton}" Click="Create_Click"/>
-                            <Button x:Name="Modify" Grid.Column="2" Content="{StaticResource FormCursoModifyTabItemHeader}" Click="Modify_Click"/>
-                            <Button x:Name="Delete" Grid.Column="4" Content="{StaticResource FormCursoRemoveButton}" Click="Delete_Click"/>
-                        </Grid>
-                    </Grid>
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormCursoDateExample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtDate}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+                                    <CheckBox Grid.Column="2" x:Name="TxtShift" Grid.Row="1" Content="{DynamicResource FormCursoShift}"/>
+                                </Grid>
+                                <Grid Grid.Row="5" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="30*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="30*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="30*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Button x:Name="Create" Grid.Column="0" Content="{StaticResource FormCursoCreationButton}" Click="Create_Click"/>
+                                    <Button x:Name="Modify" Grid.Column="2" Content="{StaticResource FormCursoModifyTabItemHeader}" Click="Modify_Click"/>
+                                    <Button x:Name="Delete" Grid.Column="4" Content="{StaticResource FormCursoRemoveButton}" Click="Delete_Click"/>
+                                </Grid>
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="Subtipo">
+                            <Grid Grid.Column="1" Grid.Row="1"
+                                  Background="{DynamicResource BackgroundContainerGradient}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="5*" />
+                                    <ColumnDefinition  Width="90*"/>
+                                    <ColumnDefinition  Width="5*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="10*" />
+                                    <RowDefinition Height="5*" />
+                                </Grid.RowDefinitions>
+                                <Grid Grid.Row="5" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="30*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="30*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="30*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Button x:Name="CreateSubTipo" Grid.Column="0" Content="{StaticResource FormCursoCreationButton}" Click="CreateSubTipo_Click"/>
+                                    <Button x:Name="ModifySubTipo" Grid.Column="2" Content="{StaticResource FormCursoModifyTabItemHeader}" Click="ModifySubTipo_Click"/>
+                                    <Button x:Name="DeleteSubTipo" Grid.Column="4" Content="{StaticResource FormCursoRemoveButton}" Click="DeleteSubTipo_Click"/>
+                                </Grid>
+                            </Grid>
+                        </TabItem>
+                    </TabControl>
                 </Grid>
             </Grid>
         </Grid>
