--- a/Gestion_AcademicoAdministrativa_Abastos/RevisarReclamaciones.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/RevisarReclamaciones.xaml
@@ -6,7 +6,77 @@
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         mc:Ignorable="d"
         Title="RevisarReclamaciones" Height="450" Width="800">
-    <Grid>
-        
+    <Grid x:Name="Container" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid x:Name="MainGridContent" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2" Background="{DynamicResource BackgroundColorfulGradient}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*" />
+                    <ColumnDefinition Width="90*" />
+                    <ColumnDefinition Width="5*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="5*" />
+                    <RowDefinition Height="90*" />
+                    <RowDefinition Height="5*" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{DynamicResource MainColorSolid}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*" />
+                        <ColumnDefinition Width="90*" />
+                        <ColumnDefinition Width="5*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="90*" />
+                        <RowDefinition Height="5*" />
+                    </Grid.RowDefinitions>
+                    <Grid HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Panel.ZIndex="-1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="15*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="15*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="15*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="15*" />
+                            <RowDefinition Height="5*" />
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="35*" />
+                                <RowDefinition Height="65*" />
+                            </Grid.RowDefinitions>
+                            <Label Grid.Row="0" Content="Contraseña Antigua"/>
+                            <PasswordBox x:Name="TxtOldPassword" Grid.Row="1" />
+                        </Grid>
+                        <Grid Grid.Row="3">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="80*" />
+                                <ColumnDefinition Width="20*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="35*" />
+                                <RowDefinition Height="65*" />
+                            </Grid.RowDefinitions>
+                            <Label Grid.Row="0" Content="Contraseña Nueva"/>
+                            <PasswordBox x:Name="TxtNewPassword" Grid.Row="1" PasswordChanged="TxtNewPassword_PasswordChanged"/>
+                            <ProgressBar x:Name="StrengthLevel" Grid.Column="1" Grid.Row="1"/>
+                        </Grid>
+                        <Grid Grid.Row="5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="35*" />
+                                <RowDefinition Height="65*" />
+                            </Grid.RowDefinitions>
+                            <Label Grid.Row="0" Content="Contraseña Nueva Repetida"/>
+                            <PasswordBox x:Name="TxtNewPasswordRepeated" Grid.Row="1" />
+                        </Grid>
+                        <Button x:Name="BtnChange" Content="Cambiar Contraseña"
+                                Grid.Row="7" Click="BtnChange_Click"/>
+                    </Grid>
+                </Grid>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
+
