Modify Notas Functionality

--- a/Gestion_AcademicoAdministrativa_Abastos/Notas.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Notas.xaml
@@ -30,9 +30,8 @@
                         <RowDefinition Height="90*" />
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
-                    <DataGrid Grid.Column="1" Grid.Row="1" x:Name="DataGridResult" AutoGenerateColumns="True" ColumnWidth="*">
+                    <DataGrid Grid.Column="1" Grid.Row="1" x:Name="DataGridNotas" AutoGenerateColumns="True" ColumnWidth="*" />
 
-                    </DataGrid>
                 </Grid>
             </Grid>
         </Grid>
